Sun May 19 23:12:07 2013  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* encoding.c: document fix, change default script encoding.
	  patched by @windwiny [Fixes GH-310]

Sun May 19 17:29:07 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb (Set#delete_if, Set#keep_if): Add comments.

Sun May 19 11:37:36 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* ext/fiddle/extconf.rb: ignore rc version of libffi to fix build failure.

Sun May 19 10:38:50 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-electric.el (ruby-electric-delete-backward-char): Use
	  delete-char instead of delete-backward-char, which is an
	  interactive function.

Sun May 19 03:59:29 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (str_scrub0): added for refactoring.

Sun May 19 03:48:26 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/common.rb (URI.decode_www_form): scrub string if decoded
	  bytes are invalid for the encoding.

Sun May 19 02:46:32 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb (Set#delete_if, Set#keep_if): Make Set#delete_if and
	  Set#keep_if more space and time efficient by avoiding to_a.

Sun May 19 02:33:09 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-electric.el (ruby-electric-setup-keymap): Make
	  backquotes electric as well.  It was listed in
	  ruby-electric-expand-delimiters-list but not activated.

	* misc/ruby-electric.el (ruby-electric-delete-backward-char):
	  Introduce electric DEL that deletes what the previous electric
	  command has input.

	* misc/ruby-electric.el (ruby-electric-matching-char): Make
	  electric quotes work again at the end of buffer.

Sun May 19 01:39:50 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (setjmp-type): check if setjmpex() is really available.
	  workaround for i686-w64-mingw32 which declares it but lacks its
	  definition.

	* include/ruby/defines.h: include setjmpex.h only if also setjmpex()
	  is available.

Sat May 18 23:57:46 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
